# booking-chatbot-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  claude.md  conftest.py  fix_docs.py  plam.md  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  codeql.yml  sonarqube.yml
apps/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: test_api.py
apps/calendar_app/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/calendar_app/migrations/: 0001_initial.py  0002_slotlock.py  0003_remove_slotlock_unique_active_slot_lock_and_more.py
apps/calendar_app/selectors/: availability.py  booking.py
apps/calendar_app/services/: booking_service.py
apps/calendar_app/tests/: test_api.py  test_models.py  test_slot_locking.py
apps/chatbot/: __init__.py  admin.py  agent.py  apps.py  models.py  serializers.py  tools.py  urls.py  views.py
apps/chatbot/migrations/: 0001_initial.py  0002_conversationsession_provider.py
apps/chatbot/services/: agentic_service.py  session_service.py
apps/chatbot/tests/: __init__.py  test_agent.py  test_api.py  test_models.py  test_tools.py
apps/dashboard/: selectors.py  serializers.py  urls.py  views.py
apps/dashboard/tests/: test_api.py
changelog/: 2026-07-24.md  README.md
common/api/: cache_helpers.py  exceptions.py  query_params.py  response.py
common/constants/: keys.py
config/: __init__.py  celery.py  env.py  exception_handler.py  settings.py  urls.py
config/settings/: __init__.py  base.py  local.py  production.py
context/: overview.md
context/accounts/: overview.md
context/calendar_app/: overview.md
context/chatbot/: overview.md
context/dashboard/: overview.md
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatMessage.jsx  TypingIndicator.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminDashboard.jsx  AdminLogin.jsx  Chatbot.jsx
